#2 Fixed layout issues with 'Who we are'

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ main {
   height: 100%;
   padding: 0;
   margin: 0;
-  min-width:320px;
+  min-width: 320px;
 }
 
 * {
@@ -39,6 +39,7 @@ body {
 .cd-fixed-bg,
 .cd-scrolling-bg {
   padding-top: 45px;
+  padding-bottom: 5px;
 }
 
 @media only screen and (min-width: 769px) {
@@ -53,7 +54,8 @@ body {
 }
 
 .cd-scrolling-bg.section-2 {
-  background-image: url("images/crumpled-paper-2048.jpg")
+  background-image: url("images/crumpled-paper-2048.jpg");
+  background-repeat: repeat;
 }
 
 .cd-fixed-bg.section-3 {
@@ -68,12 +70,11 @@ body {
 }
 
 .cd-fixed-bg.section-4 {
-   background-image: url("images/contact-us.jpg")
+  background-image: url("images/contact-us.jpg")
 }
 
 .cd-container {
   width: 100%;
-  float: left;
 }
 
 @media only screen and (min-width: 769px) {
@@ -92,12 +93,13 @@ body {
 
 .cd-panel > * {
   padding: 0 10px 10px 0;
+  margin: 0;
 }
 
 @media only screen and (min-width: 769px) {
   .cd-panel {
     margin: 30px;
-    padding:10px;
+    padding: 10px;
   }
 }
 
@@ -371,6 +373,7 @@ h1 {
 h1.error {
   background: rgba(169, 51, 47, 0.75)
 }
+
 #arrow {
   position: absolute;
   left: 50%;
@@ -380,9 +383,7 @@ h1.error {
   transform: translateX(-50%);
 }
 
-#services-arrow {
-  
-}
+#services-arrow {}
 
 h2 {
   color: #fff;
@@ -395,14 +396,6 @@ h2 {
 }
 
 h3 {
-  margin-left: 0;
-  margin-top: 5px;
-  margin-right: auto;
-  margin-bottom: 5px;
-  color: #fff;
-}
-
-h4 {
   color: #fff;
   margin-left: 0;
   margin-top: 1em;
@@ -417,19 +410,20 @@ h4 {
   h2 {
     font-size: 24pt;
   }
-  h3{
-  margin-left: 0;
-  margin-top: 5px;
-  margin-right: auto;
-  margin-bottom: 5px;
-  color: #fff;
-  font-size: 
-}
+  h3 {
+    margin-left: 0;
+    margin-top: 5px;
+    margin-right: auto;
+    margin-bottom: 5px;
+    color: #fff;
+    font-size:
+  }
   h4 {
     font-size: 16pt;
   }
-  
-  h4 p{margin:0;}
+  h4 p {
+    margin: 0;
+  }
 }
 
 ul.services {
